--- a/prototypes/poc1/poc1.html
+++ b/prototypes/poc1/poc1.html
@@ -23,7 +23,7 @@
                 currency rates for 1 ETH
             </small>
             <br>
-            You have to pay per parking block.
+            You have to pay X.XXXX ETHER per parking block.
             <br><br>
             Insert place address:
             <div class="to">
