--- a/prototypes/poc5/poc5.html
+++ b/prototypes/poc5/poc5.html
@@ -55,7 +55,7 @@
             <small>
                 <div class="payment">
                     {{#each contractLogs}}
-                        <li><b>{{this}}</b></li>
+                        <li>{{this}}</li>
                     {{/each}}
                 </div>
             </small>
